--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
